Fixed homepage not showing bug

--- a/src/discover/styles/DiscoverBottom.scss
+++ b/src/discover/styles/DiscoverBottom.scss
@@ -27,7 +27,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  align-content: center;
+  align-content: flex-start;
   gap: 0.5rem;
 }
 
